Update backend/Arbaguette/src/main/java/com/lucky/arbaguette/common/config/SecurityConfig.java